# demo_server

./: Cargo.toml  cert.pem  config.yaml  private.key
html/: index.html
html/js/: app.f12ede71.js  app.f12ede71.js.map  chunk-vendors.af07aa7b.js  chunk-vendors.af07aa7b.js.map
src/: account.rs  api.http  db.rs  device.rs  errors.rs  event.rs  lib.rs  local.http  main.rs  ping.rs  sse.rs  test.rs  web.rs  web_page.rs
src/api/: account.rs  auth.rs  login.rs  mod.rs  signup.rs  sse.rs
src/api/controller/: account_post.rs  area.rs  device.rs  house.rs  login.rs  mod.rs  signup.rs  template.rs
src/api/my/: area.rs  device.rs  house.rs  member.rs  mod.rs  scene.rs  user_info.rs
src/api/service/: email.rs  mod.rs  sse.rs
src/api/test/: mod.rs  ping.rs  test_auth.rs  test_get_account.rs  test_post_task.rs
src/api/v2/: mod.rs
src/cli/: mod.rs
src/data/: device.rs  mod.rs  sse.rs  sse_config.rs
src/db/: area.rs  cache_database.rs  database.rs  db.rs  device.rs  event.rs  house.rs  memory.rs  mod.rs  pool.rs  test_pool.rs  user_info.rs
src/db/data/: account.rs  area.rs  device.rs  house.rs  member.rs  mod.rs  scene.rs
src/dto/: account.rs  device.rs  mod.rs  sse_message.rs  task.rs
src/dto/entity/: simple.rs
src/dto/http/request/: mod.rs
src/dto/http/response/: mod.rs
src/dto/mqtt/: mod.rs
src/middleware/: mod.rs  timer.rs
src/repository/: mod.rs  pool.rs  test_pool.rs
src/security/: auth.rs  hash.rs  ip.rs  mod.rs  ssl.rs
src/service/: email.rs  event.rs  mod.rs  mqtt.rs
src/service/middleware/: access.rs  ip.rs  mod.rs
src/template/: template.rs
src/utils/: config.rs  hash.rs  mod.rs  response.rs  timestamp.rs
