[package]
name = "demo_server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.128"
log = "0.4.22"
futures = "0.3.30"
tokio = { version = "1.40.0", features = ["full"] }
async-stream = "0.3.6"
actix-cors = "0.7.0"
reqwest = { version = "0.12.8", features = ["json"] }
